--- a/index.html
+++ b/index.html
@@ -5,108 +5,122 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Congreso de Enfermería 2025</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      background: url("fondo.jpg") no-repeat center center fixed;
-      background-size: cover;
-      position: relative;
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
+ <style>
+  body {
+    background: url("fondo.jpg") no-repeat center center fixed;
+    background-size: cover;
+    position: relative;
+    margin: 0;
+    font-family: Arial, sans-serif;
+  }
 
-    body::before {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 0.8);
-      z-index: -1;
-    }
+  body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: -1;
+  }
 
-    header {
-      background-color: #003366;
-      color: white;
-      padding: 10px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-
-    .logo {
-      height: 50px;
-    }
-
-    h1 {
-      text-align: center;
-      flex: 1;
-      margin: 0;
-      font-size: 1.5em;
-    }
-
-    nav {
-      position: relative;
-    }
-
-    .menu-toggle {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-    }
-
-    .menu-toggle div {
-      width: 25px;
-      height: 3px;
-      background-color: white;
-      margin: 4px 0;
-    }
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  gap: 15px;
-  flex-wrap: wrap;
-}
-
-/* AÑADE esta parte para pantallas pequeñas */
-@media (max-width: 768px) {
-  ul {
-    display: none !important; /* Fuerza ocultar */
-    flex-direction: column;
+  header {
     background-color: #003366;
-    position: absolute;
-    right: 0;
-    top: 60px;
-    width: 200px;
-    z-index: 10;
+    color: white;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .logo {
+    height: 50px;
+  }
+
+  h1 {
+    text-align: center;
+    flex: 1;
+    margin: 0;
+    font-size: 1.5em;
+  }
+
+  nav {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .menu-toggle {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
     padding: 10px;
   }
 
-  ul.show {
-    display: flex !important; /* Solo se muestra si tiene la clase .show */
+  .menu-toggle div {
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    margin: 4px 0;
   }
-}
 
-    .imagen-seccion {
-      max-width: 100%;
-      width: 600px;
-      height: auto;
-      display: block;
-      margin: 20px auto;
-      opacity: 0;
-      transform: translateY(20px);
-      transition: opacity 1s ease, transform 1s ease;
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+  }
+
+  .imagen-seccion {
+    max-width: 100%;
+    width: 600px;
+    height: auto;
+    display: block;
+    margin: 20px auto;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 1s ease, transform 1s ease;
+  }
+
+  .imagen-visible {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  /* RESPONSIVE - Móviles */
+  @media (max-width: 768px) {
+    nav {
+      flex-direction: column;
+      align-items: flex-end;
     }
 
-    .imagen-visible {
-      opacity: 1;
-      transform: translateY(0);
+    .menu-toggle {
+      display: flex;
+      margin-left: auto;
     }
-  </style>
+
+    ul {
+      display: none !important;
+      flex-direction: column;
+      background-color: #003366;
+      position: absolute;
+      right: 0;
+      top: 60px;
+      width: 200px;
+      z-index: 10;
+      padding: 10px;
+    }
+
+    ul.show {
+      display: flex !important;
+    }
+  }
+</style>
 </head>
 <body>
   <header>
