--- a/index.html
+++ b/index.html
@@ -68,13 +68,16 @@
   }
 
   ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    gap: 15px;
-    flex-wrap: wrap;
-  }
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul {
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+}
 
   .imagen-seccion {
     max-width: 100%;
