--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Congreso de Enfermería 2025</title>
   <link rel="stylesheet" href="style.css">
- <style>
+<style>
   body {
     background: url("fondo.jpg") no-repeat center center fixed;
     background-size: cover;
@@ -68,16 +68,16 @@
   }
 
   ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
 
-nav ul {
-  display: flex;
-  gap: 15px;
-  flex-wrap: wrap;
-}
+  nav ul {
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+  }
 
   .imagen-seccion {
     max-width: 100%;
@@ -107,7 +107,7 @@ nav ul {
       margin-left: auto;
     }
 
-    ul {
+    nav ul {
       display: none !important;
       flex-direction: column;
       background-color: #003366;
@@ -119,7 +119,7 @@ nav ul {
       padding: 10px;
     }
 
-    ul.show {
+    nav ul.show {
       display: flex !important;
     }
   }
