--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Congreso Nacional de Enfermería. Todos los derechos reservados.</p>
-  </footer>
+  <p>&copy; 2025 Congreso Nacional de Enfermería. Todos los derechos reservados.</p>
+  <p>Desarrollado por <a href="https://www.instagram.com/oscarsaid20/" target="_blank">@Oscarsaid20</a></p>
+</footer>
 
   <script>
     function toggleMenu() {
