--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     
     <section id="encuesta">
       <h2>Encuesta de Satisfacción</h2>
-      <p>Tu opinión es muy importante para nosotros. Por favor, completa la encuesta de satisfacción haciendo clic en el siguiente enlace:</p>
+      <p>Tu opinión es muy importante para nosotros. Por favor, completa la encuesta haciendo clic en el siguiente enlace:</p>
       <a href="https://forms.gle/VuBkJku9QnSXh8qv8" target="_blank">Completar Encuesta</a>
     </section>
     
